[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Aman Rawat <ar.rawataman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
boto3 = "^1.34.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
